# mindsdb_evaluator

./: .buildinfo  CONTRIBUTING.md  README.md  accuracy.html  calibration.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: cla.yml  docs.yml  python-package.yml
_modules/: index.html
_modules/mindsdb_evaluator/accuracy/: classification.html  forecasting.html  general.html  regression.html
_modules/sklearn/metrics/: _classification.html  _ranking.html  _regression.html
_modules/sklearn/metrics/cluster/: _unsupervised.html
_sources/: calibration.rst.txt  index.rst.txt
_static/: documentation_options.js
docssrc/source/: accuracy.rst  calibration.rst  conf.py  index.rst
mindsdb_evaluator/: __init__.py  helpers.py
mindsdb_evaluator/accuracy/: __init__.py  classification.py  forecasting.py  general.py  rag.py  regression.py
mindsdb_evaluator/calibration/: ece.py
mindsdb_evaluator/helpers/: general.py
tests/: test_classification_accs.py  test_forecast_accs.py  test_regression_accs.py  test_sklearn_metrics.py
