[tool.poetry]
name = "mindsdb-evaluator"
version = "0.0.10"
description = "Model evaluation for Machine Learning pipelines."
authors = ["MindsDB Inc. <hello@mindsdb.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "mindsdb_evaluator"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
type-infer = ">=0.0.14"
numpy = "^1"
pandas = "^1"
scikit-learn = ">=0.24.2"
dataprep-ml = ">=0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
