[tool.poetry]
name = "mindsdb-evaluator"
version = "0.0.12"
description = "Model evaluation for Machine Learning pipelines."
authors = ["MindsDB Inc. <hello@mindsdb.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "mindsdb_evaluator"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
type-infer = ">=0.0.15"
numpy = "^1"
pandas = "^2"
scikit-learn = ">=1.0"
dataprep-ml = ">=0.0.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
